# ToyRendererV2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.md  imgui.ini  iwyu-mapping.yaml  registry.json  vcpkg-configuration.json  vcpkg.json
ToyRenderer/: CMakeLists.txt
ToyRenderer/shaders/: brdf.glsl  debug.frag  debug.vert  deferred.frag  deferred.vert  forward.frag  gbuffer.frag  gbuffer.vert  math.glsl  present.frag  shadow_map.vert  ssao.frag
ToyRenderer/src/: app.cpp  app.h  camera.cpp  camera.h  gltf.cpp  gltf.h  main.cpp  options.cpp  options.h  registry.cpp  registry.h
ToyRenderer/src/renderer/: buffer.h  command_pool.cpp  command_pool.h  constants.h  context.cpp  context.h  debug.cpp  debug.h  deletion_queue.cpp  deletion_queue.h  deletion_stack.cpp  deletion_stack.h  descriptors.cpp  descriptors.h  device.cpp  device.h  extensions.cpp  extensions.h  frame.cpp  frame.h  instance.cpp  instance.h  mesh.h  pipeline.cpp  pipeline.h  queue.h  render_graph.cpp  render_graph.h  renderpass.cpp  renderpass.h  ressource_definition.h  ressource_manager.cpp  ressource_manager.h  ressources.cpp  ressources.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  synchronisation.h  (+11 more)
ToyRenderer/src/renderer/passes/: debug.cpp  debug.h  deferred.cpp  deferred.h  forward.cpp  forward.h  frustrum_culling.cpp  frustrum_culling.h  gbuffer.cpp  gbuffer.h  pass.cpp  pass.h  present.cpp  present.h  shadow_map.cpp  shadow_map.h  ssao.cpp  ssao.h
ToyRenderer/src/system/: imgui.cpp  imgui.h  input.cpp  input.h  platform.cpp  platform.h
annexes/: ssao_noise.ipynb  ssao_noise.py
assets/scenes/sponza/: Sponza.gltf
assets/shaders/: triangle.vert
libs/: CMakeLists.txt
libs/glfw/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/renderdoc/: CMakeLists.txt
libs/spdlog/: CMakeLists.txt
libs/vulkan/: CMakeLists.txt
overlays/glm/: clang-werr.patch  portfile.cmake  vcpkg.json
overlays/spdlog/: portfile.cmake  vcpkg.json
utils/: CMakeLists.txt
utils/include/utils/: assert.h  asset.h  cast.h  math.h  misc.h  timer.cpp  timer.h  types.h
utils/include/utils/data/: hive.h  sparse_set.h  static_stack.h
utils/src/: timer.cpp
